[gd_scene load_steps=3 format=3 uid="uid://bhsdfupl4blcq"]

[ext_resource type="Script" path="res://mods/mods_scene_local.gd" id="1_cogfq"]
[ext_resource type="Theme" uid="uid://c0figasdpxdvo" path="res://assets/text.tres" id="2_cyadk"]

[node name="mods_scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_cogfq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.25
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 752.0
offset_right = 663.0
offset_bottom = 809.0
theme = ExtResource("2_cyadk")
theme_override_font_sizes/font_size = 23
text = "Note: Please check the mods you download and make sure they're safe!"
autowrap_mode = 3

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 112.0
offset_right = 272.0
offset_bottom = 135.0
theme = ExtResource("2_cyadk")
theme_override_font_sizes/font_size = 23
text = "Locally Installed Mods"
autowrap_mode = 3

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 1
size = Vector2i(641, 480)
popup_window = true
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="Install" type="Button" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 112.0
offset_right = 416.0
offset_bottom = 140.0
theme = ExtResource("2_cyadk")
theme_override_font_sizes/font_size = 21
text = "Install Mod(s)"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
initial_position = 1
size = Vector2i(424, 288)
dialog_text = "You're installing a mod locally!
Do note that Mods installed from other sources
could contain Malicious Code and affect your PC.

Installing from the Database Ensures that the
mods you download are less likely to have Malicious code within them.

(This Message will show up once.)"
dialog_autowrap = true

[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="button_up" from="Install" to="." method="_on_install_button_up"]
[connection signal="visibility_changed" from="AcceptDialog" to="." method="_on_accept_dialog_visibility_changed"]
